noinst_LIBRARIES = libaffichage.a

SOURCES = $(top_srcdir)/sources
INCLUDES = -I$(SOURCES) $(OGRE_CFLAGS)

libaffichage_a_SOURCES = \
$(SOURCES)/affichage/implantation/affichage.cpp \
$(SOURCES)/affichage/implantation/vue_personnage.cpp \
$(SOURCES)/affichage/implantation/point_de_vue.cpp \
$(SOURCES)/affichage/implantation/ogre/ogre.cpp \
$(SOURCES)/affichage/implantation/ogre/planetoide.cpp
